Fixed Image Styling So it doesn't stretch

--- a/client/src/components/layout/Navbar/Search/Search.scss
+++ b/client/src/components/layout/Navbar/Search/Search.scss
@@ -71,6 +71,9 @@
 
             .profile-pic {
                 width:30px;
+                height: 30px;
+                object-fit: cover;
+                object-position: 50% 50%;
                 position: relative;
                 top: 10px;
                 border-radius: 50%;
